# ISEK

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LEGAL.md  LICENSE  MANIFEST.in  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  publish.yml  test-publish.yml
docs/source/: Installation.rst  conf.py  contributing.rst  index.rst  quickstart.rst
examples/: README.md  agno_demo.py  distributed_agent_config_demo.py  distributed_agent_demo.py  distributed_agent_game_demo.py  hosting_agent_service.py  lv0_hello_world.py  lv10_agent_p2p_node_client.py  lv10_agent_p2p_node_server.py  lv1_single_agent.py  lv2_fastmcp_tool_agent.py  lv2_tool_agent.py  lv3_memory_agent.py  lv4_memory_tool_agent.py  lv5_team_agent.py  lv6_team_agent_plus.py  lv7_node_local.py  lv8_node_v2_client.py  lv8_node_v2_server.py  lv9_agent_on_node_client.py  lv9_agent_on_node_server.py  simple_model_chat.py  single_agent_chat.py  test_openai_simple.py
examples/app/: coin_donation_game.py  meme_tweet_app.py
examples/create_agent/: README.md  create_distributed_agent_demo.py  create_single_agent_demo.py
examples/create_agent_by_config/: README.md  distributed_agent_config_demo.py
examples/deep_think_agent/: README.md  coin_donation_game.py  distributed_agent_game_demo.py  distributed_agent_workforce_demo.py
examples/dobby/: dobby.character.json  dobby_config.yaml
examples/integration/: agno_example.py
examples/loading_tool/: single_agent_chat.py  single_agent_kol.py
examples/sylana/: sylana.character.json  sylana_config.yaml
isek/: cli.py  default_config.yaml  eval.ipynb  evaluation_results.json  exceptions.py  isek_center.py  isek_config.py
isek/adapter/: agno_adapter.py  base.py  isek_adapter.py  simple_adapter.py
isek/agent/: __init__.py  abstract_agent.py  agent.py  base.py  distributed_agent.py  isek_agent.py  memory.py  persona.py  single_agent.py  toolbox.py
isek/constant/: exceptions.py
isek/embedding/: __init__.py  abstract_embedding.py  openai_embedding.py
isek/llm/: __init__.py  abstract_model.py  llm.py  openai_model.py
isek/memory/: memory.py
isek/models/: base.py  provider.py  simpleModel.py
isek/node/: __init__.py  a2a_node.py  default_registry.py  etcd_registry.py  isek_center_registry.py  node.py  node_index.py  node_v2.py  registry.py
isek/squad/: a2a_squad.py  (+2 more)
scripts/: build_docs.py  clean.py  delete_all_etcd_node.py  test_install.py  version.py
tests/: dis_agent_search_partner_test.py  etcd_registry_test.py  isek_center_registry_test.py  log_test.py  node_test.py  test_abstract_agent.py  test_distributed_agent.py  test_fastmcp.py  test_memory.py  test_openai_simple.py  test_single_agent.py  test_toolbox.py  test_toolkit.py
(+59 files in other folders)
