[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isek"
version = "0.1.0.3"
description = "ISEK Distributed Multi-Agent Framework"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ISEK Team", email = "sparks@isek.xyz" }
]
requires-python = ">=3.10"
keywords = ["LLM", "multi-agent", "distributed", "AI"]

dependencies = [
    "click>=8.0.0",
    "loguru>=0.6.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    # Core dependencies
    "openai>=0.27.0",
    "flask>=2.0.0",
    "ecdsa",
    "numpy>=1.23,<2.0",
    "python-dotenv",
    "sphinx",
    "sphinxawesome-theme",
    "pytest",
    "pre-commit",
    "etcd3gw",
    "mypy",
    "litellm",
    "uvicorn",
    "rich",
    "fastmcp"
]

[project.scripts]
isek = "isek.cli:cli"
